--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
             class="modal-lose-icon"
             aria-label="close icon"
             width="32"
-            heidth="32"
+            height="32"
           >
             <use href="/img/icons.svg#icon-close"></use>
           </svg>
